# cpp2rust

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  lexical-wobbling-ullman.md  skills-lock.json  竞赛要求.md
.github/workflows/: ci.yml
code/libzmq/build_mingw/: CMakeCache.txt  Makefile  ZeroMQTargets.cmake  clang-format-check.sh  cmake_install.cmake  libzmq.pc  platform.hpp
docs/: 01-总体设计.md  02-进展日志.md  03-测试清单.md
libzmq_rust/: Cargo.toml
libzmq_rust/perf/: benchmark_radix_tree.rs  inproc_lat.rs  inproc_thr.rs
libzmq_rust/tests/: test_abstract_ipc.rs  test_address_tipc.rs  test_ancillaries.rs  test_app_meta.rs  test_atomics.rs  test_base85.rs  test_bind_after_connect_tcp.rs  test_bind_curve_fuzzer.rs  test_bind_fuzzer.rs  test_bind_null_fuzzer.rs  test_bind_src_address.rs  test_bind_stream_fuzzer.rs  test_bind_ws_fuzzer.rs  test_busy_poll.rs  test_capabilities.rs  test_channel.rs  test_client_server.rs  test_conflate.rs  test_connect_curve_fuzzer.rs  test_connect_delay_tipc.rs  test_connect_fuzzer.rs  test_connect_null_fuzzer.rs  test_connect_resolve.rs  test_connect_rid.rs  test_connect_stream_fuzzer.rs  test_connect_ws_fuzzer.rs  test_ctx_destroy.rs  test_ctx_options.rs  test_dgram.rs  test_diffserv.rs  test_disconnect_inproc.rs  test_disconnect_msg.rs  test_filter_ipc.rs  test_fork.rs  test_getsockopt_memset.rs  test_heartbeats.rs  test_hello_msg.rs  test_hiccup_msg.rs  test_hwm.rs  test_hwm_pubsub.rs  (+105 more)
libzmq_rust/tests/common/: mod.rs
libzmq_rust/zmq-context/: Cargo.toml
libzmq_rust/zmq-context/src/: context.rs  lib.rs  monitor.rs  options.rs  socket.rs
libzmq_rust/zmq-core/: Cargo.toml
libzmq_rust/zmq-core/benches/: data_structures.rs  perf_compare.rs
libzmq_rust/zmq-core/src/: constants.rs  engine.rs  error.rs  lib.rs  mailbox.rs  message.rs  pipe.rs  session.rs  socket_type.rs
libzmq_rust/zmq-core/src/codec/: command.rs  decoder.rs  encoder.rs  framing.rs  greeting.rs  mechanism.rs  mod.rs
libzmq_rust/zmq-core/src/data_structures/: array.rs  blob.rs  dbuffer.rs  distribution.rs  fair_queue.rs  load_balancer.rs  mod.rs  radix_tree.rs  trie.rs  ypipe.rs  ypipe_conflate.rs  yqueue.rs
libzmq_rust/zmq-core/src/security/: curve.rs  mod.rs  null.rs  plain.rs  zap.rs
libzmq_rust/zmq-core/src/socket/: base.rs  channel.rs  client.rs  dealer.rs  dgram.rs  dish.rs  gather.rs  mod.rs  pair.rs  peer.rs  pub_socket.rs  pull.rs  push.rs  radio.rs  rep.rs  req.rs  router.rs  routing.rs  scatter.rs  server.rs  stream.rs  sub_socket.rs  xpub.rs  xsub.rs
libzmq_rust/zmq-ffi/: Cargo.toml
libzmq_rust/zmq-ffi/src/: lib.rs
libzmq_rust/zmq-runtime/: Cargo.toml
libzmq_rust/zmq-runtime/src/: lib.rs  poller.rs  reactor.rs  signaler.rs  thread_pool.rs
libzmq_rust/zmq-transport/: Cargo.toml
libzmq_rust/zmq-transport/src/: endpoint.rs  inproc.rs  ipc.rs  lib.rs  tcp.rs
发现的问题/: 01-VSM优化对比不准确.md  02-传输层测试缺失.md  03-安全机制不完整.md  04-缺少性能基准测试框架.md  05-错误处理不够细化.md  06-文档不完整.md  07-缺少CI-CD集成.md  08-缺少版本管理.md  09-性能回归检测缺失.md  README.md
项目领域知识/: Sans-IO架构解析.md  ZeroMQ背景知识.md  参考项目分析.md  设计决策记录.md  项目架构分析与反思.md
