[package]
name = "zmq-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sans-I/O ZMTP protocol core — pure protocol logic with zero I/O dependencies"

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
crossbeam = "0.8"

# 可选的 CURVE 加密支持
sodiumoxide = { version = "0.2", optional = true }

[features]
default = []
curve = ["sodiumoxide"]

[dev-dependencies]
rstest = { workspace = true }
criterion = { workspace = true }

