[package]
name = "zmq-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C API compatibility layer for libzmq_rust — drop-in replacement for zmq.h"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
zmq-context = { path = "../zmq-context" }
zmq-core = { path = "../zmq-core" }
bytes = { workspace = true }
