[package]
name = "zmq-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async runtime abstraction for ZeroMQ — IO threads, event loop, signaler"

[dependencies]
zmq-core = { path = "../zmq-core" }
tokio = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }

# 跨平台 I/O 多路复用
mio = "1"

# 无锁数据结构
crossbeam = "0.8"

[dev-dependencies]
rstest = { workspace = true }
