[package]
name = "zmq-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Transport layer for ZeroMQ — TCP, IPC, inproc with Tokio async I/O"

[dependencies]
zmq-core = { path = "../zmq-core" }
tokio = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

# 跨平台 socket 配置
socket2 = "0.5"

# Windows IPC 支持
[target.'cfg(windows)'.dependencies]
win_uds = "0.1"

[dev-dependencies]
rstest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
